--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png"  sizes="192x192" href="1326001.png">
     <link rel="apple-touchicon" type="image/png"  sizes="192x192" href="1326001.png">
+    <link rel="manifest" href="manifest.json">
     <title>Демоны</title>
 </head>
 <body>
